--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="Red">#D81B60</color>
+    <color name="text">#FFFFFF</color>
+    <color name="Blue">#1F88E4</color>
+
 </resources>
